--- a/Infrastructure/Carwash.Infrastructure.csproj
+++ b/Infrastructure/Carwash.Infrastructure.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>Carwash.Infrastructure</AssemblyName>
+    <RootNamespace>Carwash.Infrastructure</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
